--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,6 @@ jobs:
       if: hashFiles('package.json') != ''
       uses: pnpm/action-setup@v4
 
-    - name: Get Hugo Version
-      id: hugo-version
-      run: |
-        VERSION=$(grep "hugo_version" hugoblox.yaml | awk '{print $2}' | tr -d "'\""")
-        echo "HUGO_VERSION=$VERSION" >> $GITHUB_ENV
-
     - name: Install dependencies
       run: |
         # Install Tailwind CLI if package.json exists
@@ -65,8 +59,8 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v3
       with:
-        hugo-version: ${{ env.HUGO_VERSION }}
-        extended: true
+      hugo-version: '0.124.1'
+      extended: true
 
     # Cache dependencies (Go modules, node_modules) - stable, rarely changes
     - uses: actions/cache@v4
